# Mara-sports

backend/: .env  DATABASE_SCHEMA.md  README.md  alembic.ini  database_schema.sql  env.example  pyproject.toml  requirements-minimal.txt  requirements.txt  setup.py  setup_simple.py  start.py  test_complete_registration.py  update_database.py  update_students_table.sql
backend/adi/Scripts/: activate  activate.bat
backend/alembic/: env.py
backend/alembic/versions/: a2b3380b924e_update_student_model_with_registration_.py
backend/app/: main.py
backend/app/api/v1/: admin.py  auth.py  exports.py  imports.py  institutions.py  payments.py  sponsorships.py  sports.py  students.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: base.py  database.py  repository.py
backend/app/db/models/: audit_log.py  document.py  institution.py  notification.py  otp.py  payment.py  registration.py  sponsorship.py  sport.py  student.py
backend/app/models/: __init__.py  consent.py  institution.py  notification.py  payment.py  registration.py  sponsorship.py  sport.py  student.py  user.py
backend/app/schemas/: __init__.py  auth.py  common.py  document.py  institution.py  notification.py  payment.py  registration.py  sponsorship.py  sport.py  student.py  user.py
backend/app/scripts/: __init__.py  create_super_admin.py  seed_data.py
backend/app/services/: __init__.py  auth_service.py  email_service.py  file_service.py  import_service.py  notification_service.py  otp_service.py  payment_service.py
backend/app/utils/: __init__.py  helpers.py
backend/app/workers/: __init__.py  tasks.py
frontend/: README.md  index.html  package-lock.json  tailwind.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AdminHeader.tsx  AdminProtectedRoute.tsx  AdminSidebar.tsx  AppSidebar.tsx  DashboardHeader.tsx  ExportButton.tsx  InstitutionHeader.tsx  InstitutionSidebar.tsx  NotificationDropdown.tsx  RegistrationSteps.tsx  SportsFormDemo.tsx
frontend/src/components/institution-registration/: InstitutionDetailsStep.tsx  InstitutionPaymentStep.tsx  ManualStudentAddStep.tsx  SportsSubCategoriesStep.tsx
frontend/src/components/registration/: DocumentUploadStep.tsx  EmailOtpStep.tsx  InstitutionRegistrationSidebar.tsx  ParentMedicalStep.tsx  ParentMedicalStepOld.tsx  PersonalDetailsStep.tsx  RegistrationSidebar.tsx  ReviewPaymentStep.tsx  ReviewPaymentStepOld.tsx  SportsSelectionStep.tsx  UserTypeSelection.tsx
frontend/src/components/ui/: export-button.tsx
frontend/src/contexts/: AuthContext.tsx  NotificationContext.tsx
frontend/src/layouts/: AdminLayout.tsx  DashboardLayout.tsx  InstitutionLayout.tsx
frontend/src/lib/: adminDataSync.ts  institutionData.ts  sportsData.ts
frontend/src/pages/: NewInstitutionRegisterPage.tsx  NewRegisterPage.tsx  RegisterPage.tsx  UnifiedLoginPage.tsx
frontend/src/pages/admin/: AdminDashboard.tsx  AdminInstitutions.tsx  AdminInvoices.tsx  AdminPayments.tsx  AdminSponsorships.tsx  AdminSports.tsx  AdminStudents.tsx
frontend/src/pages/dashboard/: ConsentPage.tsx  Dashboard.tsx  GuardianInfoPage.tsx  MedicalInfoPage.tsx  NotificationsPage.tsx  PaymentsPage.tsx  ProfilePage.tsx  SportsRegistrationPage.tsx
frontend/src/pages/institution/: InstitutionDashboard.tsx  InstitutionPayments.tsx  InstitutionRegisterPage.tsx  InstitutionStudentManagement.tsx
frontend/src/services/: api.ts  sportsService.ts
